# FoglioAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  redis_client.py  settings.py
app/agents/: __init__.py  base.py  editor.py  geopolitics.py  graphic_artist.py  historian.py  orchestrator.py  politics_left.py  politics_right.py  researcher.py  writer.py
app/api/: __init__.py  compose.py  health.py  pdf.py  visuals.py  web.py
app/models/: __init__.py  agent.py  agent_memo.py  article.py  article_run.py  base.py  citation.py  compose.py  visual.py
app/pubsub/: __init__.py  scratchpad.py
app/services/: __init__.py  compose.py  newspaper_renderer.py  pdf_generator.py  template.py  template_helpers.py
app/services/visuals/: __init__.py  cache.py  chart_generator.py  executor.py  image_generator.py
app/static/css/: typography.css  vintage-newspaper.css
app/static/js/: font-loader.js
app/storage/: __init__.py  article_run.py  memos.py  redis.py
app/templates/: about.html  article.html  base.html  index.html
app/templates/errors/: 404.html  500.html
app/templates/newspaper/: article.html  base.html  front_page.html
app/templates/newspaper/components/: masthead.html
app/utils/: __init__.py  article_balancer.py  bias.py  errors.py  ids.py  markdown.py  time.py  validation.py
app/web/: __init__.py  cache.py  citations.py  extractor.py  fetcher.py
docs/: agent_reflection.md  api_reference.md  extending_agents.md  redis_integration.md  style_guide.md  template_article.md  template_base.md  template_customization.md  template_gallery.md
scripts/: prd.txt  roadmap.yaml
tests/: conftest.py  test_health.py  test_main.py
tests/agents/: test_editor_reflection.py  test_geopolitics.py  test_historian.py  test_politics_left.py  test_politics_right.py  test_reflection.py
tests/api/: test_compose.py  test_pdf.py  test_web.py
tests/integration/: test_orchestrator_reflection.py  test_pipeline.py  test_redis_integration.py  test_reflection.py
tests/load/: test_performance.py
tests/models/: test_agent_memo.py  test_article_run.py  test_visual.py
tests/pubsub/: __init__.py  test_reflection.py  test_scratchpad.py
tests/services/: test_compose.py  test_newspaper_renderer.py  test_pdf_generator.py  test_template.py  test_template_helpers.py  test_visual_verification.py
tests/storage/: test_redis.py
tests/utils/: test_article_balancer.py  test_bias.py  test_errors.py  test_ids.py  test_markdown.py  test_rate_limiter.py  test_time.py  test_validation.py
tests/web/: __init__.py  test_cache.py  test_citations.py  test_extractor.py  test_fetcher.py
